# mcp-server-strava

./: .env-template  .gitignore  .mcp.json  CODE_REVIEW.md  IDEA.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.cursor/: mcp.json
.github/workflows/: ci.yml
scripts/: auth.py  setup.sh
src/: server.py  server.py.backup
src/auth/: rate_limiter.py  strava_auth.py
src/cache/: lru_cache.py
src/strava/: errors.py
src/strava/auth/: __init__.py  rate_limiter.py  strava_auth.py
src/strava/cache/: __init__.py  lru_cache.py
tests/: test_errors.py  test_script_auth.py  test_server.py  test_utils_and_pagination.py
