[project]
name = "mcp-server-strava"
version = "0.1.0"
description = "Strava API integration with Model Context Protocol SDK"
authors = [{name = "rbctmz"}]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/rbctmz/mcp-server-strava"
Repository = "https://github.com/rbctmz/mcp-server-strava.git"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mcp]
name = "Strava Integration"
version = "1.0.0"
python_path = ".venv/bin/python"

[tool.mcp.server]
module = "src.server"
